--- a/CSHARP/ProxyPattern/ProxyPattern/ProxyPattern.csproj
+++ b/CSHARP/ProxyPattern/ProxyPattern/ProxyPattern.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="MainApp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Proxy.cs" />
     <Compile Include="RealSubject.cs" />
